--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profpic.jpg"
   name             : "Stephan Dochow-Sondershaus"
   pronouns         : # example: "she/her"  
-  bio              : "I am a sociologist interested in the dynamics of public opinion, opinion polarization, educational inequalities and the impacts of ethnic diversity on social cohesion"
+  bio              : "I am a quantitative sociologist interested in the dynamics of public opinion, opinion polarization, educational inequalities and the impacts of ethnic diversity on social cohesion. My methods involve both novel techniques based on insights from the causal inference literature, and encompassing descriptive work."
   location         : "Copenhagen"
   employer         : "University of Copenhagen"
   uri              : # URL
