--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,9 +2,9 @@
 main:
 
   - title: "News"
-    url: /posts/
+    url: /news/
 
-<!--   - title: "Publications"
+  - title: "Publications"
     url: /publications/
 
   - title: "(Future) Talks/Conference Presentations"
@@ -17,4 +17,4 @@ main:
     url: /cv/
 
   - title: "Replication packages"
-    url: /repl/ -->
+    url: /repl/
