--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,16 +1,20 @@
 # main links links
 main:
-  - title: "Publications"
+
+  - title: "News"
+    url: /posts/
+
+<!--   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "(Future) Talks/Conference Presentations"
+    url: /talks/
 
   - title: "Teaching"
-    url: /teaching/    
-        
-  - title: "News"
-    url: /news/
-    
+    url: /teaching/
+
   - title: "CV"
     url: /cv/
+
+  - title: "Replication packages"
+    url: /repl/ -->
