--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profpic.jpg"
   name             : "Stephan Dochow-Sondershaus"
   pronouns         : # example: "she/her"  
-  bio              : "I am a quantitative sociologist interested in the dynamics of public opinion, the role of family socialization on political attitudes, educational inequalities and the impacts of ethnic diversity on social cohesion. My methods involve both a focus on causal inference with observational data, and encompassing descriptive work."
+  bio              : "I am a quantitative sociologist interested in public opinion dynamics and polarization, the role of family socialization on political attitudes, ethnic educational inequalities and the impacts of ethnic diversity on social cohesion. My methods focus on causal inference with observational data, and encompassing descriptive work."
   location         : "Copenhagen"
   employer         : "University of Copenhagen"
   uri              : # URL
